fix: alignment

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@ h1 {
 }
 
 .card {
+  width: 100vw;
   margin: 0 auto;
-  margin-top: 60px;
   padding: 20px;
 }
 
